--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -73,8 +73,8 @@ block.jp-Vanadiumcarbidewall.name = [#485767]Vanadium Carbide Wall
 block.jp-Vanadiumcarbidewall.description = Protect structures from enemies projectiles.
 block.jp-Zincextractor.name = [#A865C9]Zinc extractor
 block.jp-Zincextractor.description = Extract zinc from zinc ore.
-block.jp-Neostabilizer.name = [#A865C9]Neostabilizer
-block.jp-Neostabilizer.description = Stores neoplasm into a cell for later uses.
+block.jp-neostabilizer.name = [#A865C9]Neostabilizer
+block.jp-neostabilizer.description = Stores neoplasm into a cell for later uses.
 block.jp-Nydusaecore.details = Seriously what do you expect from it, it\u0027s just a bigger core
 block.jp-Nanoprocessor.name = [#A865C9]Biomass Processor
 block.jp-Nanoprocessor.description = Create Biomass from Spore pod.
@@ -129,6 +129,8 @@ block.jp-Suppressor.name = [#A865C9]Suppressor
 block.jp-Suppressor.description = Rapidly fire bullet at both air and ground enemies.
 block.jp-Masscultivator.name = [#A865C9]Mass cultivator
 block.jp-Masscultivator.description = A more efficient (and more expensive) version of cultivator.
+block.jp-package-opener.name = [#A865C9]Neocell Destabilizer
+block.jp-package-opener.description = Breaks Neocell apart for neoplasm, all resource that went into making the neocell will not be refunded. \n [#f0]WILL EXPLODE IF THE NEOPLASM REACHES FULL CAPACITY.
 block.jp-Lotus-panel.name = [#A865C9]Lotus panel
 block.jp-Lotus-panel.description = Generate Power from the sun, even more efficient than the non-zerg version.
 block.jp-Oil-burner.name = [#A865C9]Oil Generator
@@ -163,14 +165,14 @@ unit.jp-Gragoth.description = Shoot piercing orb at enemies.
 unit.jp-Thera.name = [#590e14]T[#500c12]h[#470b10]e[#3e090e]r[#35080c]a
 unit.jp-Thera.description = Flying unit that Launches missile at enemies.
 unit.jp-Imp.name = [#590e14]I[#500c12]m[#470b10]p
-unit.jp-Imp.description = A self-destruct unit that fly off once it attacked or get killed in battle.
+unit.jp-Imp.description = A self-destruct unit that flies off once it attacked or get killed in battle.
 unit.jp-DeathImp.name = [#590e14]Rein[#500c12]car[#470b10]nat[#3e090e]ion
 unit.jp-DeathImp.description = Floating body of the imp, can attack for one more time.
-unit.jp-Carci.name = [#590e14]C[#500c12]a[#470b10]r[#3e090e]c[#35080c]i
-unit.jp-Carci.description = A ranged area attacker which deal devastating damage to enemies, cannot attack air units.
-unit.jp-Autus.name = [#590e14]A[#500c12]u[#470b10]t[#3e090e]u[#35080c]s
-unit.jp-Autus.description = Heavy armored zerg, decreases damage taken while attacking.
-unit.jp-Autus.details = Imagine a mace, yes a mace. Now imagine them on cocaine with pierce and 1000 dps.
+unit.jp-carci.name = [#590e14]C[#500c12]a[#470b10]r[#3e090e]c[#35080c]i
+unit.jp-carci.description = Fires long-range artillery at enemy ground targets, bypasses wall.
+unit.jp-autus.name = [#590e14]A[#500c12]u[#470b10]t[#3e090e]u[#35080c]s
+unit.jp-autus.description = Heavily armored zerg, Fires a continuous jet of flame at enemy targets, decreases damage taken while attacking.
+unit.jp-autus.details = Seems to be related to a liquid called "neoplasm" that only exists on Erekir (or at least we thought so.),
 unit.jp-Hivedefender.name = [#A865C9]Hive defender
 unit.jp-Hivedefender.description = Protect the core.
 unit.jp-Zeta.name = [#A865C9]Zeta
@@ -183,11 +185,11 @@ unit.jp-Sporophage.description = An advanced Hive defender with a built-in meltd
 unit.jp-Sporophage.details = Basically Hive Sentinel II.
 unit.jp-Roach.name = [#A865C9]Roach
 unit.jp-Roach.description = Fire long-range artillery at enemy ground target. Dissolves enemies with its bullet.
-unit.jp-Zergling.name = [#A865C9]Zergling
-unit.jp-Zergling.description = A small Zerg unit, strong in swarm.
-unit.jp-Zergling.details = The second zerg units created (Drone are the first one), it seems to be the weakest combat units alone but are the strongest in swarm.
-unit.jp-Raptor.name = [#A865C9]Raptor
-unit.jp-Raptor.description = Elite zergling, better, faster, stronger and have wings!
+unit.jp-zergling.name = [#A865C9]Zergling
+unit.jp-zergling.description = A small Zerg unit, strong in swarm.
+unit.jp-zergling.details = The second zerg units created (Drone are the first one), it seems to be the weakest combat units alone but are the strongest in swarm.
+unit.jp-raptor.name = [#A865C9]Raptor
+unit.jp-raptor.description = Elite zergling, better, faster, stronger and have wings!
 unit.jp-Interceptor.name = [#A865C9]Interceptor
 unit.jp-Interceptor.description = A small plane that capable of distract nearby enemy.
 unit.jp-Guardian.name = [#A865C9]Guardian
@@ -197,8 +199,8 @@ unit.jp-Breacher.description = A machine of destruction, capable of destroy ever
 unit.jp-Drone.name = [#A865C9]Drone
 unit.jp-Drone.description = A flying drone that collect resources and won\u0027t fight back when attacked, [grey]Unless controlled by player.
 unit.jp-Drone.details = The first zerg ever created (and no, larva doesn\u0027t count), made to working for the swarm and sometime even fight.
-unit.jp-Baneling.name = [#A865C9]Baneling
-unit.jp-Baneling.description = A suicide fighter, Deal heavy damage upon death.
+unit.jp-baneling.name = [#A865C9]Baneling
+unit.jp-baneling.description = A suicide fighter, Deal heavy damage upon death.
 unit.jp-Behomoth.name = [#A865C9]Behomoth
 unit.jp-Behomoth.description = A [#f0]GIANT [white]behomoth.
 unit.jp-Behomoth.details = The lobber may or may not be op depending on the enemy crowd control.
