--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,9 +1,11 @@
 #status
 
 status.jp-dissolving.name = [#A865C9]Dissolving
-status.jp-dissolving.description = Mr hydro, I don\u0027t feel so good
+status.jp-dissolving.description = This unit have been hit by a corrosive bullet, or step on a corrosive liquid.
+status.jp-dissolving.details = Mr hydro, I don\u0027t feel so good
 status.jp-frostshield.name = [#23dbde]Frostshield
-status.jp-frostshield.description = WHY WON\u0027T YOU FUCKING DIE!? \nStatus effect son.
+status.jp-frostshield.description = This unit armor have been hardened which makes it harder to kill.
+status.jp-frostshield.details = WHY WON\u0027T YOU FUCKING DIE!? \nStatus effect son.
 status.jp-stunned.name = [yellow]Stunned
 status.jp-stunned.description = Disallows movement of said unit.
 
