how is intelij THIS bad I still have no fucking clue

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,10 +1,10 @@
 #status
 
 status.jp-dissolving.name = [#A865C9]Dissolving
-status.jp-dissolving.description = This unit have been hit by a corrosive bullet, or step on a corrosive liquid.
+status.jp-dissolving.description = This unit has been hit by a corrosive bullet, or step on a corrosive liquid.
 status.jp-dissolving.details = Mr hydro, I don\u0027t feel so good
 status.jp-frostshield.name = [#23dbde]Frostshield
-status.jp-frostshield.description = This unit armor have been hardened which makes it harder to kill.
+status.jp-frostshield.description = This unit armor has been hardened which makes it harder to kill.
 status.jp-frostshield.details = WHY WON\u0027T YOU FUCKING DIE!? \nStatus effect son.
 status.jp-stunned.name = [yellow]Stunned
 status.jp-stunned.description = Disallows movement of said unit.
@@ -35,7 +35,7 @@ item.jp-Neocells.name = [#590e14]Neocell
 item.jp-Neocells.description = Stabilized neoplasm contained inside a cell, flammable and may explode if not handled correctly. Used to create neoplastic structure and units.
 item.jp-Neocells.details = It would be worse if the neoplasm inside get released...
 item.jp-Vanadium.name = [#485767]Vanadium
-item.jp-Vanadium.description = Raw vanadium, can be used for production of other refined material.
+item.jp-Vanadium.description = Raw vanadium can be used for production of other refined material.
 item.jp-VCA.name = [#303a45]Vanadium Carbide alloy
 item.jp-VCA.description = Very tough alloy, made from mixing Spore pod and Vanadium at high temperature, Used in making wall and as ammo.
 item.jp-Voltaicgas.name = [#45368F]Voltaic gas
