--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -82,8 +82,8 @@ block.jp-Nanoprocessor.name = [#A865C9]Biomass Processor
 block.jp-Nanoprocessor.description = Create Biomass from Spore pod.
 block.jp-Harvester_bay.name = [#A865C9]Harvester bay
 block.jp-Harvester_bay.description = Create a single harvest that collect resources.
-block.jp-ApollyonAssembler.name = [#A865C9]Apollyon Assmbler
-block.jp-ApollyonAssembler.description = Create BIG units.
+block.jp-apollyonAssembler.name = [#A865C9]Apollyon Assmbler
+block.jp-apollyonAssembler.description = Create BIG units.
 block.jp-Naniteinfuser.name = [#A865C9]Nanite infuser
 block.jp-Naniteinfuser.description = Create Nanite alloys by mixing [#add8e6]Titanium, [#301934]Spore pod and [#666b6c]Silicon [white]together.
 block.jp-Neocell-generator.name = [#A865C9]Neocell generator
@@ -109,15 +109,15 @@ block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
 block.jp-Artilleryturret.description = A long range turret that shoots anti armor bullet at enemies.
 block.jp-Mitocannon.name = [#A865C9]Mitocannon
 block.jp-Mitocannon.description = An upgraded Spore Garrison.
-block.jp-Pool.name = [#A865C9]Incubator
-block.jp-Pool.description = Produces small ground zerg unit.
-block.jp-Pool.details = Purger may or may not be overpowered.
-block.jp-Assembler.name = [#A865C9]Assembler
-block.jp-Assembler.description = Produces big zerg unit, both ground and air included.
-block.jp-Assembler.details = May or may not be balanced.
-block.jp-Synapse-tower.name = [#A865C9]Synapse Tower
-block.jp-Synapse-tower.description = Produces small flying zerg unit.
-block.jp-Synapse-tower.details = Flying unit may or may not be complete garbage.
+block.jp-pool.name = [#A865C9]Incubator
+block.jp-pool.description = Produces small ground zerg unit.
+block.jp-pool.details = Purger may or may not be overpowered.
+block.jp-assembler.name = [#A865C9]Assembler
+block.jp-assembler.description = Produces big zerg unit, both ground and air included.
+block.jp-assembler.details = May or may not be balanced.
+block.jp-synapse-tower.name = [#A865C9]Synapse Tower
+block.jp-synapse-tower.description = Produces small flying zerg unit.
+block.jp-synapse-tower.details = Flying unit may or may not be complete garbage.
 block.jp-Oarch.name = [#A865C9]Oarch
 block.jp-Oarch.description = Fires bullets that make the enemies slower or outright stunning them.
 block.jp-Flakaccelerator.name = [#A865C9]Flak accelerator
@@ -139,12 +139,12 @@ block.jp-Oil-burner.name = [#A865C9]Oil Generator
 block.jp-Oil-burner.description = Generates power by burning oil.
 block.jp-Voltatic-burner.name = [#A865C9]Voltatic Generator
 block.jp-Voltatic-burner.description = Burns Voltatic gas to generates power.
-block.jp-AcidifierModule.name = [#A865C9]Acidifier Module
-block.jp-AcidifierModule.description = Increases Apollyon Assembler tier when placed next to it.
+block.jp-acidifier-module.name = [#A865C9]Acidifier Module
+block.jp-acidifier-module.description = Increases Apollyon Assembler tier when placed next to it.
 block.jp-Extractor.name = [#A865C9]Extractor
 block.jp-Extractor.description = Only can mine certain ore, but faster than regular 2x2 drill.
-block.jp-Gestator.name = [#590e14]Gestator
-block.jp-Gestator.description = Creates neoplasm unit.
+block.jp-gestator.name = [#590e14]Gestator
+block.jp-gestator.description = Creates neoplasm unit.
 block.jp-Fluoresilt-refinery.name = [#23DBDE]Fluoresilt refinery
 block.jp-Fluoresilt-refinery.description =  Refines fluoresilt into usable material.
 #end blocks
