--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -151,17 +151,17 @@ block.jp-Fluoresilt-refinery.description =  Refines fluoresilt into usable mater
 #units
 unit.jp-Demolisher.name = [#590e14]De[#500c12]mo[#470b10]li[#3e090e]sh[#35080c]er
 unit.jp-Demolisher.description = A heavy unit used for sieging bases, deal extremely high damage to buildings.
-unit.jp-Spitter.name = [#590e14]Sp[#500c12]i[#470b10]t[#3e090e]t[#35080c]er
-unit.jp-Spitter.description = Rapidly spits neoplasm at enemies, do not let them go near your water pumps.
-unit.jp-Carrier.name = [#590e14]Ca[#500c12]r[#470b10]r[#3e090e]i[#35080c]er
-unit.jp-Carrier.description = Drops cluster of bombs on ground enemies, Occasionally Drop an egg that give birth to a bug if not destroyed in time. Spawns 2 bugs on death.
-unit.jp-Saboteur.name = [#590e14]Sa[#500c12]bo[#470b10]te[#3e090e]u[#35080c]r
-unit.jp-Saboteur.description = Low health air unit that is excellent at sabotaging enemies supply line. Fires bullet that recoils the shooter and extra damage to buildings.
-unit.jp-Saboteur.details = IMPOSTER AMONG US IMPOSTER AMOGUS AAAAAAAAAAAAAAA.
+unit.jp-spitter.name = [#590e14]Sp[#500c12]i[#470b10]t[#3e090e]t[#35080c]er
+unit.jp-spitter.description = Rapidly spits neoplasm at enemies, do not let them go near your water pumps.
+unit.jp-carrier.name = [#590e14]Ca[#500c12]r[#470b10]r[#3e090e]i[#35080c]er
+unit.jp-carrier.description = Drops cluster of bombs on ground enemies, Occasionally Drop an egg that give birth to a bug if not destroyed in time. Spawns 2 bugs on death.
+unit.jp-saboteur.name = [#590e14]Sa[#500c12]bo[#470b10]te[#3e090e]u[#35080c]r
+unit.jp-saboteur.description = Low health air unit that is excellent at sabotaging enemies supply line. Fires bullet that recoils the shooter and extra damage to buildings.
+unit.jp-saboteur.details = IMPOSTER AMONG US IMPOSTER AMOGUS AAAAAAAAAAAAAAA.
 unit.jp-Slasher.name = [#590e14]Sl[#500c12]a[#470b10]s[#3e090e]h[#35080c]er
 unit.jp-Slasher.description = Launchs missiles that deals heavy area damage.
-unit.jp-Protectorate.name = [#590e14]Pr[#500c12]ote[#470b10]cto[#3e090e]ra[#35080c]te
-unit.jp-Protectorate.description = Armored air unit that buffs and heal nearby allies. Fires a stream of low damage bullet at enemies.
+unit.jp-protectorate.name = [#590e14]Pr[#500c12]ote[#470b10]cto[#3e090e]ra[#35080c]te
+unit.jp-protectorate.description = Armored air unit that buffs and heal nearby allies. Fires a stream of low damage bullet at enemies.
 unit.jp-Gragoth.name = [#590e14]Gr[#500c12]a[#470b10]g[#3e090e]o[#35080c]th
 unit.jp-Gragoth.description = Shoot piercing orb at enemies.
 unit.jp-Thera.name = [#590e14]T[#500c12]h[#470b10]e[#3e090e]r[#35080c]a
@@ -185,8 +185,8 @@ unit.jp-HiveSentinel.details = There is a record of it killing people, please be
 unit.jp-Sporophage.name = [#A865C9]Sporophage
 unit.jp-Sporophage.description = An advanced Hive defender with a built-in meltdown, very dangerous.
 unit.jp-Sporophage.details = Basically Hive Sentinel II.
-unit.jp-Roach.name = [#A865C9]Roach
-unit.jp-Roach.description = Fire long-range artillery at enemy ground target. Dissolves enemies with its bullet.
+unit.jp-roach.name = [#A865C9]Roach
+unit.jp-roach.description = Fire long-range artillery at enemy ground target. Dissolves enemies with its bullet.
 unit.jp-zergling.name = [#A865C9]Zergling
 unit.jp-zergling.description = A small Zerg unit, strong in swarm.
 unit.jp-zergling.details = The second zerg units created (Drone are the first one), it seems to be the weakest combat units alone but are the strongest in swarm.
