--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -79,13 +79,13 @@ block.jp-neostabilizer.name = [#A865C9]Neostabilizer
 block.jp-neostabilizer.description = Stores neoplasm into a cell for later uses.
 block.jp-Nydusaecore.details = Seriously what do you expect from it, it\u0027s just a bigger core
 block.jp-Nanoprocessor.name = [#A865C9]Biomass Processor
-block.jp-Nanoprocessor.description = Create Biomass from Spore pod.
+block.jp-Nanoprocessor.description = Processes Spore Pod into Biomass.
 block.jp-Harvester_bay.name = [#A865C9]Harvester bay
 block.jp-Harvester_bay.description = Create a single harvest that collect resources.
 block.jp-apollyonAssembler.name = [#A865C9]Apollyon Assmbler
 block.jp-apollyonAssembler.description = Create BIG units.
 block.jp-Naniteinfuser.name = [#A865C9]Nanite infuser
-block.jp-Naniteinfuser.description = Create Nanite alloys by mixing [#add8e6]Titanium, [#301934]Spore pod and [#666b6c]Silicon [white]together.
+block.jp-Naniteinfuser.description = Fuses Biomass, BioSil and Silicon into Natine, generates some heat in the process
 block.jp-Neocell-generator.name = [#A865C9]Neocell generator
 block.jp-Neocell-generator.description = Generates power by burning... neoplasm?
 block.jp-BioSynthesizer.name = [#A865C9]Bio Synthesizer
