--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -16,16 +16,16 @@ status.jp-stunned.description = Disallows movement of said unit.
 item.jp-Azurite.name = [#245485]Azurite
 item.jp-Azurite.description = Raw Azurite. The purest one.
 item.jp-Biomass.name = [#8B73C7]Biomass
-item.jp-Biomass.description = A material created from mixing spore pod together. Used in most zerggy buildings.
+item.jp-Biomass.description = A material created from mixing spore pod together. Used in all type of zerg structure and also as fuel.
 item.jp-Biomass.details = Extremely dangerous if consumed, x5 the dose of normal spore pod. Wait, who eat it anyway?
 item.jp-BioSil.name = [#45368F]BioSil
 item.jp-BioSil.description = An alloy made from graphite, silicon and biomass, used to make more advanced material and buildings.
 item.jp-BioSil.details = "What if we mix silicon and biomass together?" They said... and so they did, it was a big success.
 item.jp-Carbine-composite.name =[#45368F]Carbine composite
-item.jp-Carbine-composite.description = Made by mixing biosili, nanite and mineral together. Used as building material and fuel.
-item.jp-Carbine-composite.details = THE GREGTECH, IT\u0027S REAL
+item.jp-Carbine-composite.description = Made by mixing biosili, nanite and mineral together. Used as building material.
+item.jp-Carbine-composite.details = THE GREGTECH, IS REAL
 item.jp-Fluoresilt.name = [#23DBDE]Fluoresilt
-item.jp-Fluoresilt.description = Used for production of other refined material.
+item.jp-Fluoresilt.description = Soil from otherworldly planet, completely devoid of life. Can be processed to obtain Fluorite.
 item.jp-Fluorite.name = [#23DBDE]Fluorite
 item.jp-Fluorite.description = Glowstick.
 item.jp-Nanitealloy.name = [#45368F]Nanite alloy
@@ -35,14 +35,14 @@ item.jp-Neocells.name = [#590e14]Neocell
 item.jp-Neocells.description = Stabilized neoplasm contained inside a cell, flammable and may explode if not handled correctly. Used to create neoplastic structure and units.
 item.jp-Neocells.details = It would be worse if the neoplasm inside get released...
 item.jp-Vanadium.name = [#485767]Vanadium
-item.jp-Vanadium.description = Raw vanadium can be used for production of other refined material.
+item.jp-Vanadium.description = Raw vanadium, Is used as construction material and refined material production.
 item.jp-VCA.name = [#303a45]Vanadium Carbide alloy
-item.jp-VCA.description = Very tough alloy, made from mixing Spore pod and Vanadium at high temperature, Used in making wall and as ammo.
+item.jp-VCA.description = Very tough alloy, made from mixing Spore Pod and Vanadium at high temperature, Used in making wall and as ammo.
 item.jp-Voltaicgas.name = [#45368F]Voltaic gas
-item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together. Used as fuel.
+item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together. Used for fuel.
 item.jp-Voltaicgas.details = They said it\u0027s a gas but are they really a gas?
 item.jp-Zinc.name = [#747474]Zinc
-item.jp-Zinc.description = Raw zinc. What else do you expect from it? Its just zinc
+item.jp-Zinc.description = Used in making nearly indestructible fluid cells.
 
 #end items
 
@@ -70,11 +70,11 @@ block.jp-Nydusaecore.description = Core of the zerg base. Very tough, stores alo
 block.jp-ZincExtractor.name = [#A865C9]Zinc Extractor
 block.jp-ZincExtractor.description = Extracts zinc from underground, require biomass to operate.
 block.jp-Vanadicarbide.name = [#A865C9]Vanadicarbide Alloyer
-block.jp-Vanadicarbide.description = Make Vanadium carbide alloy by mixing spore pod and vanadium. Generates heat
+block.jp-Vanadicarbide.description = Make Vanadium carbide alloy by mixing Biosil and Vanadium. Generates heat as a byproduct.
 block.jp-Vanadiumcarbidewall.name = [#485767]Vanadium Carbide Wall
 block.jp-Vanadiumcarbidewall.description = Protect structures from enemies projectiles.
 block.jp-Zincextractor.name = [#A865C9]Zinc extractor
-block.jp-Zincextractor.description = Extract zinc from zinc ore.
+block.jp-Zincextractor.description = Extract zinc from the underground.
 block.jp-neostabilizer.name = [#A865C9]Neostabilizer
 block.jp-neostabilizer.description = Stores neoplasm into a cell for later uses.
 block.jp-Nydusaecore.details = Seriously what do you expect from it, it\u0027s just a bigger core
@@ -89,16 +89,18 @@ block.jp-Naniteinfuser.description = Fuses Biomass, BioSil and Silicon into Nati
 block.jp-Neocell-generator.name = [#A865C9]Neocell generator
 block.jp-Neocell-generator.description = Generates power by burning... neoplasm?
 block.jp-BioSynthesizer.name = [#A865C9]Bio Synthesizer
-block.jp-BioSynthesizer.description = Turn Graphite, Silicon and Biomass into unstable alloy.
+block.jp-BioSynthesizer.description = Synthesize Biomass, Graphite and Silicon into Biosil.
+block.jp-BioSynthesizer.details = Do NOT ask why does it need graphite, it just does.
 block.jp-Voltaicchamber.name = [#A865C9]Voltaic Chamber
-block.jp-Voltaicchamber.description = A chamber used to mix spore, water together for some voltaic gas.
+block.jp-Voltaicchamber.description = Mixes Spore and Water into Volatic gas.
+block.jp-Voltaicchamber.details = Biomass production but with water added.
 block.jp-Carbine-composite-smelter.name = [#A865C9]Carbine composite smelter
-block.jp-Carbine-composite-smelter.description = A factory used to make Carbine composite, require power to fuction.
+block.jp-Carbine-composite-smelter.description = Smelts Biosil, Vanadium and Natine into Carbine Composite Alloy.
 block.jp-Carbine-composite-smelter.details = CRYSTAL METH CRYSTAL METH CRYSTAL METH
 block.jp-Item-pipe.name = [#A865C9]Biomass Pipe
-block.jp-Item-pipe.description = Transfer item to wherever you want, very fast.
-block.jp-Item-pipe.details = pro tip: mix slag and oil together to enable sandbox mode
-block.jp-SIC.name = [yellow]Imperial [#A865C9]Railgun
+block.jp-Item-pipe.description = Transports item forward, faster than normal Serpulo conveyor.
+block.jp-Item-pipe.details = Pro tip: this block was orginally a fluid pipe.
+block.jp-SIC.name = [yellow]Supreme [#A865C9]Railgun
 block.jp-SIC.description = The ultimate alien weapon designed for the invasion of serpulo.
 block.jp-Impalercannon.name = [#A865C9]Impaler Cannon
 block.jp-Impalercannon.description = A Giant cannon designed for destroying big units.
@@ -108,7 +110,7 @@ block.jp-Sentinel.description = Fires high damage single target laser at enemy t
 block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
 block.jp-Artilleryturret.description = A long range turret that shoots anti armor bullet at enemies.
 block.jp-Mitocannon.name = [#A865C9]Mitocannon
-block.jp-Mitocannon.description = An upgraded Spore Garrison.
+block.jp-Mitocannon.description = A stronger version of the spore garrison.
 block.jp-pool.name = [#A865C9]Incubator
 block.jp-pool.description = Produces small ground zerg unit.
 block.jp-pool.details = Purger may or may not be overpowered.
@@ -138,13 +140,13 @@ block.jp-Lotus-panel.description = Generate Power from the sun, even more effici
 block.jp-Oil-burner.name = [#A865C9]Oil Generator
 block.jp-Oil-burner.description = Generates power by burning oil.
 block.jp-Voltatic-burner.name = [#A865C9]Voltatic Generator
-block.jp-Voltatic-burner.description = Burns Voltatic gas to generates power.
+block.jp-Voltatic-burner.description = Burns Voltatic gas to generates power. More efficient than normal burner generator.
 block.jp-acidifier-module.name = [#A865C9]Acidifier Module
 block.jp-acidifier-module.description = Increases Apollyon Assembler tier when placed next to it.
 block.jp-Extractor.name = [#A865C9]Extractor
-block.jp-Extractor.description = Only can mine certain ore, but faster than regular 2x2 drill.
+block.jp-Extractor.description = A drill only capable of mining certain ores. Mines at a faster pace than normal 2x2 drills.
 block.jp-gestator.name = [#590e14]Gestator
-block.jp-gestator.description = Creates neoplasm unit.
+block.jp-gestator.description = Produces neoplastic units.
 block.jp-Fluoresilt-refinery.name = [#23DBDE]Fluoresilt refinery
 block.jp-Fluoresilt-refinery.description =  Refines fluoresilt into usable material.
 #end blocks
