--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -125,7 +125,7 @@ block.jp-Oarch.description = Fires bullets that make the enemies slower or outri
 block.jp-Flakaccelerator.name = [#A865C9]Flak accelerator
 block.jp-Flakaccelerator.description = Shoots frag bullet at air enemies! Have more range than your normal Scatter.
 block.jp-Sporegarrison.name = [#A865C9]Spore garrison
-block.jp-Sporegarrison.description = Fires bullet using electricity.
+block.jp-Sporegarrison.description = Fires piercing electric balls at enemies.
 block.jp-Biomassreactor.name = [#A865C9]Biomass reactor
 block.jp-Biomassreactor.description = Funny looking impact reactor, due to Biomass is in both liquid state and solid state while burning, it is used to feed reactor, make less power than impact reactor but have more hp.
 block.jp-Biomassreactor.details = May or may not explode when destroyed.
