--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -178,9 +178,9 @@ unit.jp-autus.name = [#590e14]A[#500c12]u[#470b10]t[#3e090e]u[#35080c]s
 unit.jp-autus.description = Heavily armored zerg, Fires a continuous jet of flame at enemy targets, decreases damage taken while attacking.
 unit.jp-autus.details = Seems to be related to a liquid called "neoplasm" that only exists on Erekir (or at least we thought so.),
 unit.jp-Hivedefender.name = [#A865C9]Hive defender
-unit.jp-Hivedefender.description = Protect the core.
+unit.jp-Hivedefender.description = Defenses the Hive from enemies. Build structures
 unit.jp-Zeta.name = [#A865C9]Zeta
-unit.jp-Zeta.description = Wait the unit is hidden, how are you seeing this?
+unit.jp-Zeta.description = Wait, the unit is hidden, how are you seeing this?
 unit.jp-HiveSentinel.name = [#A865C9]Hive Sentinel
 unit.jp-HiveSentinel.description = A Flying Living creature that protect their hive at all cost.
 unit.jp-HiveSentinel.details = There is a record of it killing people, please be careful.
@@ -190,10 +190,10 @@ unit.jp-Sporophage.details = Basically Hive Sentinel II.
 unit.jp-roach.name = [#A865C9]Roach
 unit.jp-roach.description = Fire long-range artillery at enemy ground target. Dissolves enemies with its bullet.
 unit.jp-zergling.name = [#A865C9]Zergling
-unit.jp-zergling.description = A small Zerg unit, strong in swarm.
-unit.jp-zergling.details = The second zerg units created (Drone are the first one), it seems to be the weakest combat units alone but are the strongest in swarm.
+unit.jp-zergling.description = Smallest zerg unit, fires standard bullet at enemy target
+unit.jp-zergling.details = Typically only seen moving in a group, lone zergling is an easy target for predator.
 unit.jp-raptor.name = [#A865C9]Raptor
-unit.jp-raptor.description = Elite zergling, better, faster, stronger and have wings!
+unit.jp-raptor.description = Elite zergling, better, faster, stronger, and they even have wings!
 unit.jp-Interceptor.name = [#A865C9]Interceptor
 unit.jp-Interceptor.description = A small plane that capable of distract nearby enemy.
 unit.jp-Guardian.name = [#A865C9]Guardian
