--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -21,14 +21,14 @@ item.jp-Biomass.details = Extremely dangerous if consumed, x5 the dose of normal
 item.jp-BioSil.name = [#45368F]BioSil
 item.jp-BioSil.description = An alloy made from graphite, silicon and biomass, used to make more advanced material and buildings.
 item.jp-BioSil.details = "What if we mix silicon and biomass together?" They said... and so they did, it was a big success.
-item.jp-Carbine-composite.name =[#45368F]Carbine composite
+item.jp-Carbine-composite.name =[#45368F]Carbine Composite
 item.jp-Carbine-composite.description = Made by mixing biosili, nanite and mineral together. Used as building material.
 item.jp-Carbine-composite.details = THE GREGTECH, IS REAL
 item.jp-Fluoresilt.name = [#23DBDE]Fluoresilt
 item.jp-Fluoresilt.description = Soil from otherworldly planet, completely devoid of life. Can be processed to obtain Fluorite.
 item.jp-Fluorite.name = [#23DBDE]Fluorite
 item.jp-Fluorite.description = Glowstick.
-item.jp-Nanitealloy.name = [#45368F]Nanite alloy
+item.jp-Nanitealloy.name = [#45368F]Nanite Alloy
 item.jp-Nanitealloy.description = Created from mixing [#8B73C7]Biomass[white], [#45368F]Biosil [white]and [grey]Silicon [white]together. Used as an advanced building material.
 item.jp-Nanitealloy.details =  [#f0]Highly unstable, please use with caution, lack of carefulness may lead to explosion or fire hazard.
 item.jp-Neocells.name = [#590e14]Neocell
@@ -36,9 +36,9 @@ item.jp-Neocells.description = Stabilized neoplasm contained inside a cell, flam
 item.jp-Neocells.details = It would be worse if the neoplasm inside get released...
 item.jp-Vanadium.name = [#485767]Vanadium
 item.jp-Vanadium.description = Raw vanadium, Is used as construction material and refined material production.
-item.jp-VCA.name = [#303a45]Vanadium Carbide alloy
+item.jp-VCA.name = [#303a45]Vanadium Carbide Alloy
 item.jp-VCA.description = Very tough alloy, made from mixing Spore Pod and Vanadium at high temperature, Used in making wall and as ammo.
-item.jp-Voltaicgas.name = [#45368F]Voltaic gas
+item.jp-Voltaicgas.name = [#45368F]Voltaic Gas
 item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together. Used for fuel.
 item.jp-Voltaicgas.details = They said it\u0027s a gas but are they really a gas?
 item.jp-Zinc.name = [#747474]Zinc
@@ -48,17 +48,17 @@ item.jp-Zinc.description = Used in making nearly indestructible fluid cells.
 
 #Environment
 
-block.jp-Tile.name = [#A865C9]Dark floor
-block.jp-Wall.name = [#A865C9]Dark wall
+block.jp-Tile.name = [#A865C9]Dark Floor
+block.jp-Wall.name = [#A865C9]Dark Wall
 block.jp-Fluoresiltile.name = [#23DBDE]Fluoresilt
 block.jp-Silt-moss.name = [#A865C9]Fluromoss
-block.jp-Silt.name = [#A865C9]Vanadium sand
-block.jp-Blackboulder.name = [#A865C9]Dark boulder
+block.jp-Silt.name = [#A865C9]Vanadium Sand
+block.jp-Blackboulder.name = [#A865C9]Dark Boulder
 #End environment
 
 #liquids
-liquid.jp-liquidSpore.name = Liquid spore
-liquid.jp-liquidSpore.description = Very acidic liquid that is stored inside baneling, effective at destroying small units.
+liquid.jp-liquidSpore.name = Liquid Spore
+liquid.jp-liquidSpore.description = Very acidic liquid that is stored inside baneling, super effective in destroying small units.
 #end liquids
 #blocks
 block.jp-Sporecore.name = [#A865C9]Hatchery
@@ -73,7 +73,7 @@ block.jp-Vanadicarbide.name = [#A865C9]Vanadicarbide Alloyer
 block.jp-Vanadicarbide.description = Make Vanadium carbide alloy by mixing Biosil and Vanadium. Generates heat as a byproduct.
 block.jp-Vanadiumcarbidewall.name = [#485767]Vanadium Carbide Wall
 block.jp-Vanadiumcarbidewall.description = Protect structures from enemies projectiles.
-block.jp-Zincextractor.name = [#A865C9]Zinc extractor
+block.jp-Zincextractor.name = [#A865C9]Zinc Extractor
 block.jp-Zincextractor.description = Extract zinc from the underground.
 block.jp-neostabilizer.name = [#A865C9]Neostabilizer
 block.jp-neostabilizer.description = Stores neoplasm into a cell for later uses.
@@ -84,9 +84,9 @@ block.jp-Harvester_bay.name = [#A865C9]Harvester bay
 block.jp-Harvester_bay.description = Create a single harvest that collect resources.
 block.jp-apollyonAssembler.name = [#A865C9]Apollyon Assmbler
 block.jp-apollyonAssembler.description = Create BIG units.
-block.jp-Naniteinfuser.name = [#A865C9]Nanite infuser
+block.jp-Naniteinfuser.name = [#A865C9]Nanite Infuser
 block.jp-Naniteinfuser.description = Fuses Biomass, BioSil and Silicon into Natine, generates some heat in the process
-block.jp-Neocell-generator.name = [#A865C9]Neocell generator
+block.jp-Neocell-generator.name = [#A865C9]Neocell Generator
 block.jp-Neocell-generator.description = Generates power by burning... neoplasm?
 block.jp-BioSynthesizer.name = [#A865C9]Bio Synthesizer
 block.jp-BioSynthesizer.description = Synthesize Biomass, Graphite and Silicon into Biosil.
@@ -94,23 +94,23 @@ block.jp-BioSynthesizer.details = Do NOT ask why does it need graphite, it just 
 block.jp-Voltaicchamber.name = [#A865C9]Voltaic Chamber
 block.jp-Voltaicchamber.description = Mixes Spore and Water into Volatic gas.
 block.jp-Voltaicchamber.details = Biomass production but with water added.
-block.jp-Carbine-composite-smelter.name = [#A865C9]Carbine composite smelter
+block.jp-Carbine-composite-smelter.name = [#A865C9]Carbine Composite Smelter
 block.jp-Carbine-composite-smelter.description = Smelts Biosil, Vanadium and Natine into Carbine Composite Alloy.
 block.jp-Carbine-composite-smelter.details = CRYSTAL METH CRYSTAL METH CRYSTAL METH
 block.jp-Item-pipe.name = [#A865C9]Biomass Pipe
-block.jp-Item-pipe.description = Transports item forward, faster than normal Serpulo conveyor.
+block.jp-Item-pipe.description = Moves item forward, faster than normal Serpulo conveyor.
 block.jp-Item-pipe.details = Pro tip: this block was orginally a fluid pipe.
 block.jp-SIC.name = [yellow]Supreme [#A865C9]Railgun
 block.jp-SIC.description = The ultimate alien weapon designed for the invasion of serpulo.
 block.jp-Impalercannon.name = [#A865C9]Impaler Cannon
 block.jp-Impalercannon.description = A Giant cannon designed for destroying big units.
-block.jp-Impalercannon.details = Use something to protect them, they\u0027re weak.
+block.jp-Impalercannon.details = Shorter range in exchange for more damage, how fair and balanced is tat?
 block.jp-Sentinel.name = [#A865C9]Sentinel
-block.jp-Sentinel.description = Fires high damage single target laser at enemy target.Ignores armor.
+block.jp-Sentinel.description = Fires high damage single target laser at enemy target. Ignores armor.
 block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
 block.jp-Artilleryturret.description = A long range turret that shoots anti armor bullet at enemies.
 block.jp-Mitocannon.name = [#A865C9]Mitocannon
-block.jp-Mitocannon.description = A stronger version of the spore garrison.
+block.jp-Mitocannon.description = Fires high-speed piercing electric bullet. Super effective at destroying large number of weak units.
 block.jp-pool.name = [#A865C9]Incubator
 block.jp-pool.description = Produces small ground zerg unit.
 block.jp-pool.details = Purger may or may not be overpowered.
@@ -122,20 +122,20 @@ block.jp-synapse-tower.description = Produces small flying zerg unit.
 block.jp-synapse-tower.details = Flying unit may or may not be complete garbage.
 block.jp-Oarch.name = [#A865C9]Oarch
 block.jp-Oarch.description = Fires bullets that make the enemies slower or outright stunning them.
-block.jp-Flakaccelerator.name = [#A865C9]Flak accelerator
+block.jp-Flakaccelerator.name = [#A865C9]Flak Accelerator
 block.jp-Flakaccelerator.description = Shoots frag bullet at air enemies! Have more range than your normal Scatter.
-block.jp-Sporegarrison.name = [#A865C9]Spore garrison
+block.jp-Sporegarrison.name = [#A865C9]Spore Garrison
 block.jp-Sporegarrison.description = Fires piercing electric balls at enemies.
-block.jp-Biomassreactor.name = [#A865C9]Biomass reactor
+block.jp-Biomassreactor.name = [#A865C9]Biomass Reactor
 block.jp-Biomassreactor.description = Funny looking impact reactor, due to Biomass is in both liquid state and solid state while burning, it is used to feed reactor, make less power than impact reactor but have more hp.
 block.jp-Biomassreactor.details = May or may not explode when destroyed.
 block.jp-Suppressor.name = [#A865C9]Suppressor
 block.jp-Suppressor.description = Rapidly fire bullet at both air and ground enemies.
-block.jp-Masscultivator.name = [#A865C9]Mass cultivator
+block.jp-Masscultivator.name = [#A865C9]Mass Cultivator
 block.jp-Masscultivator.description = A more efficient (and more expensive) version of cultivator.
 block.jp-package-opener.name = [#A865C9]Neocell Destabilizer
 block.jp-package-opener.description = Breaks Neocell apart for neoplasm, all resource that went into making the neocell will not be refunded. \n[#f0]WILL EXPLODE IF THE NEOPLASM REACHES FULL CAPACITY.
-block.jp-Lotus-panel.name = [#A865C9]Lotus panel
+block.jp-Lotus-panel.name = [#A865C9]Lotus Panel
 block.jp-Lotus-panel.description = Generate Power from the sun, even more efficient than the non-zerg version.
 block.jp-Oil-burner.name = [#A865C9]Oil Generator
 block.jp-Oil-burner.description = Generates power by burning oil.
@@ -147,7 +147,7 @@ block.jp-Extractor.name = [#A865C9]Extractor
 block.jp-Extractor.description = A drill only capable of mining certain ores. Mines at a faster pace than normal 2x2 drills.
 block.jp-gestator.name = [#590e14]Gestator
 block.jp-gestator.description = Produces neoplastic units.
-block.jp-Fluoresilt-refinery.name = [#23DBDE]Fluoresilt refinery
+block.jp-Fluoresilt-refinery.name = [#23DBDE]Fluoresilt Refinery
 block.jp-Fluoresilt-refinery.description =  Refines fluoresilt into usable material.
 #end blocks
 #units
