--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -214,10 +214,10 @@ unit.jp-Scarabid.details = A walking ripple.
 unit.jp-Rizomorph.name = [#A865C9]Rizomorph
 unit.jp-Rizomorph.description = A flying zerg that shoots exploding spore seed.
 unit.jp-Purger.name = [#A865C9]Purger
-unit.jp-Purger.description = Use biomass to burn everything in its path.
+unit.jp-Purger.description = Fires a continuous jet of flame at enemy targets.
 unit.jp-Purger.details = Peace is not an option but Arson is.
 unit.jp-Basilisk.name = [#A865C9]Basilisk
-unit.jp-Basilisk.description = A giant tank with mini gun on its side to knocks units back.
+unit.jp-Basilisk.description = A slow walking artillery unit. Fires large electric cluster-shells at enemy targets. Knocks enemy targets back with 4 autonomous minigun turret.
 unit.jp-Harvester.name = [#A865C9]Harvester
 unit.jp-Harvester.description = Harvest things, unlike drone it cannot defend itself.
 unit.jp-Bomb.name = [#A865C9]Missiles
