--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -106,11 +106,11 @@ block.jp-Impalercannon.name = [#A865C9]Impaler Cannon
 block.jp-Impalercannon.description = A Giant cannon designed for destroying big units.
 block.jp-Impalercannon.details = Shorter range in exchange for more damage, how fair and balanced is tat?
 block.jp-Sentinel.name = [#A865C9]Sentinel
-block.jp-Sentinel.description = Fires high damage single target laser at enemy target. Ignores armor.
+block.jp-Sentinel.description = Fires high damage single target laser at enemy target. Ignores armor. Requires constant supply of water to operate.
 block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
 block.jp-Artilleryturret.description = A long range turret that shoots anti armor bullet at enemies.
 block.jp-Mitocannon.name = [#A865C9]Mitocannon
-block.jp-Mitocannon.description = Fires high-speed piercing electric bullet. Super effective at destroying large number of weak units.
+block.jp-Mitocannon.description = Fires high-speed piercing electric bullet. Super effective at destroying large number of weak units. Require constant supply of water to operate.
 block.jp-pool.name = [#A865C9]Incubator
 block.jp-pool.description = Produces small ground zerg unit.
 block.jp-pool.details = Purger may or may not be overpowered.
@@ -123,7 +123,7 @@ block.jp-synapse-tower.details = Flying unit may or may not be complete garbage.
 block.jp-Oarch.name = [#A865C9]Oarch
 block.jp-Oarch.description = Fires bullets that make the enemies slower or outright stunning them.
 block.jp-Flakaccelerator.name = [#A865C9]Flak Accelerator
-block.jp-Flakaccelerator.description = Shoots frag bullet at air enemies! Have more range than your normal Scatter.
+block.jp-Flakaccelerator.description = Fires frag bullet at air enemies! Have more range than your normal Scatter.
 block.jp-Sporegarrison.name = [#A865C9]Spore Garrison
 block.jp-Sporegarrison.description = Fires piercing electric balls at enemies.
 block.jp-Biomassreactor.name = [#A865C9]Biomass Reactor
@@ -176,7 +176,7 @@ unit.jp-carci.name = [#590e14]C[#500c12]a[#470b10]r[#3e090e]c[#35080c]i
 unit.jp-carci.description = Fires long-range artillery at enemy ground targets, bypasses wall.
 unit.jp-autus.name = [#590e14]A[#500c12]u[#470b10]t[#3e090e]u[#35080c]s
 unit.jp-autus.description = Heavily armored zerg, Fires a continuous jet of flame at enemy targets, decreases damage taken while attacking.
-unit.jp-autus.details = Seems to be related to a liquid called "neoplasm" that only exists on Erekir (or at least we thought so.),
+unit.jp-autus.details = Seems to be related to a liquid called "Neoplasm" that only exists on Erekir... Or erekir is the only planet that we have known with neoplasm.
 unit.jp-Hivedefender.name = [#A865C9]Hive defender
 unit.jp-Hivedefender.description = Defenses the Hive from enemies. Build structures
 unit.jp-Zeta.name = [#A865C9]Zeta
