--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -176,7 +176,7 @@ unit.jp-carci.name = [#590e14]C[#500c12]a[#470b10]r[#3e090e]c[#35080c]i
 unit.jp-carci.description = Fires long-range artillery at enemy ground targets, bypasses wall.
 unit.jp-autus.name = [#590e14]A[#500c12]u[#470b10]t[#3e090e]u[#35080c]s
 unit.jp-autus.description = Heavily armored zerg, Fires a continuous jet of flame at enemy targets, decreases damage taken while attacking.
-unit.jp-autus.details = Seems to be related to a liquid called "Neoplasm" that only exists on Erekir... Or erekir is the only planet that we have known with neoplasm.
+unit.jp-autus.details = Seems to be related to a liquid called "Neoplasm" that only exists on Erekir... Or Erekir is the only planet that we have known with neoplasm.
 unit.jp-Hivedefender.name = [#A865C9]Hive defender
 unit.jp-Hivedefender.description = Defenses the Hive from enemies. Build structures
 unit.jp-Zeta.name = [#A865C9]Zeta
