--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -110,7 +110,7 @@ block.jp-Sentinel.description = Fires high damage single target laser at enemy t
 block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
 block.jp-Artilleryturret.description = A long range turret that shoots anti armor bullet at enemies.
 block.jp-Mitocannon.name = [#A865C9]Mitocannon
-block.jp-Mitocannon.description = Fires high-speed piercing electric bullet. Super effective at destroying large number of weak units. Require constant supply of water to operate.
+block.jp-Mitocannon.description = Fires high-speed electric bullet. Super effective at destroying large number of weak units. Require constant supply of water to operate.
 block.jp-pool.name = [#A865C9]Incubator
 block.jp-pool.description = Produces small ground zerg unit.
 block.jp-pool.details = Purger may or may not be overpowered.
