--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -15,6 +15,7 @@ status.jp-stunned.description = Disallows movement of said unit.
 
 item.jp-Azurite.name = [#245485]Azurite
 item.jp-Azurite.description = Raw Azurite. The purest one.
+item.jp-Azurite.details = It does contain copper, I think. Too bad you cant extract it... or can you?
 item.jp-Biomass.name = [#8B73C7]Biomass
 item.jp-Biomass.description = A material created from mixing spore pod together. Used in all type of zerg structure and also as fuel.
 item.jp-Biomass.details = Extremely dangerous if consumed, x5 the dose of normal spore pod. Wait, who eat it anyway?
@@ -27,9 +28,10 @@ item.jp-Carbine-composite.details = THE GREGTECH, IS REAL
 item.jp-Fluoresilt.name = [#23DBDE]Fluoresilt
 item.jp-Fluoresilt.description = Soil from otherworldly planet, completely devoid of life. Can be processed to obtain Fluorite.
 item.jp-Fluorite.name = [#23DBDE]Fluorite
-item.jp-Fluorite.description = Glowstick.
+item.jp-Fluorite.description = Not a glowstick.
+item.jp-Fluorite.details = Glowstick.
 item.jp-Nanitealloy.name = [#45368F]Nanite Alloy
-item.jp-Nanitealloy.description = Created from mixing [#8B73C7]Biomass[white], [#45368F]Biosil [white]and [grey]Silicon [white]together. Used as an advanced building material.
+item.jp-Nanitealloy.description = Created from mixing [#8B73C7]Biomass[white], [#45368F]Biosil [grey]and [grey]Silicon [grey]together. Used as an advanced building material.
 item.jp-Nanitealloy.details =  [#f0]Highly unstable, please use with caution, lack of carefulness may lead to explosion or fire hazard.
 item.jp-Neocells.name = [#590e14]Neocell
 item.jp-Neocells.description = Stabilized neoplasm contained inside a cell, flammable and may explode if not handled correctly. Used to create neoplastic structure and units.
@@ -39,10 +41,11 @@ item.jp-Vanadium.description = Raw vanadium, Is used as construction material an
 item.jp-VCA.name = [#303a45]Vanadium Carbide Alloy
 item.jp-VCA.description = Very tough alloy, made from mixing Spore Pod and Vanadium at high temperature, Used in making wall and as ammo.
 item.jp-Voltaicgas.name = [#45368F]Voltaic Gas
-item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together. Used for fuel.
+item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [grey]and [blue]water [grey]together. Used for fuel.
 item.jp-Voltaicgas.details = They said it\u0027s a gas but are they really a gas?
 item.jp-Zinc.name = [#747474]Zinc
 item.jp-Zinc.description = Used in making nearly indestructible fluid cells.
+item.jp-Zinc.details = DO NOT ask how these cell are so strong.
 
 #end items
 
