--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -39,7 +39,7 @@ item.jp-Neocells.details = It would be worse if the neoplasm inside get released
 item.jp-Vanadium.name = [#485767]Vanadium
 item.jp-Vanadium.description = Raw vanadium, Is used as construction material and refined material production.
 item.jp-VCA.name = [#303a45]Vanadium Carbide Alloy
-item.jp-VCA.description = Very tough alloy, made from mixing Spore Pod and Vanadium at high temperature, Used in making wall and as ammo.
+item.jp-VCA.description = Very tough alloy, made from mixing Spore Pod and Vanadium at high temperature, Used in making wall as well as ammo.
 item.jp-Voltaicgas.name = [#45368F]Voltaic Gas
 item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [grey]and [blue]water [grey]together. Used for fuel.
 item.jp-Voltaicgas.details = They said it\u0027s a gas but are they really a gas?
