awoken from my eternal sleep 🗣🗣️️️

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -28,7 +28,7 @@ item.jp-Carbine-composite.details = THE GREGTECH, IS REAL
 item.jp-Fluoresilt.name = [#23DBDE]Fluoresilt
 item.jp-Fluoresilt.description = Soil from otherworldly planet, completely devoid of life. Can be processed to obtain Fluorite.
 item.jp-Fluorite.name = [#23DBDE]Fluorite
-item.jp-Fluorite.description = Not a glowstick.
+item.jp-Fluorite.description = Used in the construction of units. Not a glowstick.
 item.jp-Fluorite.details = Glowstick.
 item.jp-Nanitealloy.name = [#45368F]Nanite Alloy
 item.jp-Nanitealloy.description = Created from mixing [#8B73C7]Biomass[white], [#45368F]Biosil [grey]and [grey]Silicon [grey]together. Used as an advanced building material.
